--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="p5.min.js"></script>
+    <script src="p5.Color.js"></script>
+    <script src="p5.Core.js"></script>
+    <script src="p5.dom.js"></script>
+    <script src="p5.Events.js"></script>
     <script src="p5.dom.min.js"></script>
+    <script src="p5.Image.js"></script>
+    <script src="p5.IO.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.Math.js"></script>
+    <script src="p5.sound.js"></script>
+    <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="p5.Typography.js"></script>
+    <script src="p5.Util.js"></script>
+    <script src="p5.WebGL.js"></script>
     <script src="sketch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
